--- a/ICD-10-code-F44/index.html
+++ b/ICD-10-code-F44/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sabbie e Stregoni</title>
-  <meta name="description" content="Sai sostenere la crisi magica su Athas? Entra nel mondo Dark Sun di D&D e gestisci la crisi della magia. Leggi, fai le tue scelte e inizia la tua avventura!">
-  <meta name="author" content="FEM - Future Education Modena">
+  <meta name="description" content="Put back together the pieces of your past, hidden around in your room. Mourn the death of your past self. Accept who you have become.  Move on. Get out of the room.">
+  <meta name="author" content="Hiworu">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
   <style>
