--- a/ICD-10-code-F44/index.html
+++ b/ICD-10-code-F44/index.html
@@ -14,7 +14,7 @@
         background-color: #FDD974;
         margin: 0;
         padding: 0;
-        background-image: url('img/bg-desert.jpg');
+        background-image: url('img/room.jpg');
         background-size: cover;
         background-position: center;
         background-attachment: fixed
@@ -32,7 +32,7 @@
         margin: 20px auto;
         padding: 20px;
         background-color: #f9f3de; /* Fallback color */
-        background-image: url('img/paper_texture.jpg'); /* Paper texture image URL */
+        background-image: url('img/room.jpg'); /* Paper texture image URL */
         background-size: cover; /* Scale the background image to cover the container */
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: Add shadow */
