--- a/ICD-10-code-F44/index.html
+++ b/ICD-10-code-F44/index.html
@@ -32,7 +32,7 @@
         margin: 20px auto;
         padding: 20px;
         background-color: #f9f3de; /* Fallback color */
-        background-image: url('img/room.jpg'); /* Paper texture image URL */
+        background-image: url('img/paper.jpg'); /* Paper texture image URL */
         background-size: cover; /* Scale the background image to cover the container */
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: Add shadow */
@@ -46,7 +46,7 @@
       /* Special story container styles */
       .special-story-container {
         background-color: #FFE4B5; /* Light brown background */
-        color: #4A4A4A; /* Dark font color */
+        color: #FFFFFF; /* Dark font color */
       }
       .story-text {
         margin-top: 20px;
@@ -71,11 +71,11 @@
         margin: 5px;
         border-radius: 20px; /* Rounded corners */
         padding: 10px 20px; /* Adjust padding */
-        background-color: #8B4513; /* Dark orange/brown color */
+        background-color: #7f60b5; /* Dark orange/brown color */
         border: none; /* Remove border */
       }
       .choice-button:hover {
-        background-color: #A0522D; /* Darken the color on hover */
+        background-color: #634991; /* Darken the color on hover */
       }
       /* Footer styles */
       footer {
@@ -89,7 +89,7 @@
       }
       strong, b {
         background-color: #FFD700; /* Gold background color */
-        color: #4A4A4A; /* Dark font color */
+        color: #FFFFFF; /* Dark font color */
         padding: 2px 5px; /* Adjust padding */
         border-radius: 3px; /* Rounded corners */
       }
