--- a/ICD-10-code-F44/index.html
+++ b/ICD-10-code-F44/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ICD-10-code-F44</title>
+  </title>ICD-10-code-F44</title>
   <meta name="description" content="Put back together the pieces of your past, hidden around in your room. Mourn the death of your past self. Accept who you have become.  Move on. Get out of the room.">
   <meta name="author" content="Elia Folisi">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
