--- a/ICD-10-code-F44/index.html
+++ b/ICD-10-code-F44/index.html
@@ -80,7 +80,7 @@
       /* Footer styles */
       footer {
         background-color: #333;
-        color: #fff;
+        color: #ffff;
         text-align: center;
         padding: 20px;
         position: fixed;
@@ -132,7 +132,7 @@
     <div id="flow-content">
       <div id="cover">
         <h1>Project Name</h1>
-        <h2 class="header-right">Sands & Sorcerers</h2>
+        <h2 class="header-right">ICD-10-code-F44</h2>
         <button class="btn btn-primary choice-button" onclick="homerDrawer.start()">INIZIAMO</button>
       </div>
       <div id="node-content" style="display: none;">
