--- a/ICD-10-code-F44/index.html
+++ b/ICD-10-code-F44/index.html
@@ -51,6 +51,7 @@
       .story-text {
         margin-top: 20px;
         font-size: 17px;
+        color: #FFFFFF;
       }
       .avatar-container {
         text-align: center;
@@ -133,7 +134,7 @@
       <div id="cover">
         <h1>Project Name</h1>
         <h2 class="header-right">ICD-10-code-F44</h2>
-        <button class="btn btn-primary choice-button" onclick="homerDrawer.start()">INIZIAMO</button>
+        <button class="btn btn-primary choice-button" onclick="homerDrawer.start()">BEGIN</button>
       </div>
       <div id="node-content" style="display: none;">
   <!--      <span id="actor-avatar">Avatar</span> -->
