--- a/ICD-10-code-F44/index.html
+++ b/ICD-10-code-F44/index.html
@@ -90,7 +90,7 @@
       }
       strong, b {
         background-color: #FFD700; /* Gold background color */
-        color: #FFFFFF; /* Dark font color */
+        color: #FFFFF; /* Dark font color */
         padding: 2px 5px; /* Adjust padding */
         border-radius: 3px; /* Rounded corners */
       }
