--- a/ICD-10-code-F44/index.html
+++ b/ICD-10-code-F44/index.html
@@ -81,7 +81,7 @@
       /* Footer styles */
       footer {
         background-color: #333;
-        color: #ffff;
+        color: #FFFFFF;
         text-align: center;
         padding: 20px;
         position: fixed;
