--- a/ICD-10-code-F44/index.html
+++ b/ICD-10-code-F44/index.html
@@ -56,6 +56,7 @@
       .avatar-container {
         text-align: center;
         margin-bottom: 20px;
+        color: #FFFFFF;
       }
       .avatar-container img {
         width: 100px; /* Adjust size of the avatar image */
