--- a/ICD-10-code-F44/index.html
+++ b/ICD-10-code-F44/index.html
@@ -97,9 +97,11 @@
       }
       .header-center {
           text-align: center;
+         color: #FFFFFF;
       }
       .header-right {
           text-align: right;
+         color: #FFFFFF;
       }
   </style>
 <!-- Google tag (gtag.js) -->
